--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -19,39 +19,46 @@
   <description>Extension for JUnit5 for managing set up and tear down of environments during (integration) testing</description>
   <url>https://github.com/coldrye-java/junit-testing</url>
 
-  <properties>
-    <coy-junit-common.version>1.0.0</coy-junit-common.version>
-    <coy-junit-testing-common.version>1.0.0</coy-junit-testing-common.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-common</artifactId>
-      <version>${coy-junit-common.version}</version>
+      <version>1.1.0-SNAPSHOT</version>
     </dependency>
+
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-testing-common</artifactId>
-      <version>${coy-junit-testing-common.version}</version>
+      <version>1.0.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
