--- a/junit-env-extension/src/examples/simple/pom.xml
+++ b/junit-env-extension/src/examples/simple/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <groupId>eu.coldrye.junit.env.examples</groupId>
-  <artifactId>junit-env-simple-example</artifactId>
+  <artifactId>junit-env-fixtures.simple-example</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
