--- a/junit-env-hadoop-mini-clusters/pom.xml
+++ b/junit-env-hadoop-mini-clusters/pom.xml
@@ -20,39 +20,37 @@
   <url>https://github.com/coldrye-java/junit-testing</url>
 
   <properties>
-    <coy-junit-common.version>1.0.0</coy-junit-common.version>
-    <coy-junit-testing-common.version>1.0.0</coy-junit-testing-common.version>
-    <coy-junit-env-extension.version>1.0.3-SNAPSHOT</coy-junit-env-extension.version>
-
     <hadoop-mini-clusters.version>0.1.14</hadoop-mini-clusters.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
-      <artifactId>junit-common</artifactId>
-      <version>${coy-junit-common.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-env-extension</artifactId>
-      <version>${coy-junit-env-extension.version}</version>
+      <version>1.0.3-SNAPSHOT</version>
     </dependency>
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+
     <dependency>
       <groupId>com.github.sakserv</groupId>
       <artifactId>hadoop-mini-clusters-hdfs</artifactId>
       <version>${hadoop-mini-clusters.version}</version>
     </dependency>
-    <!-- TODO do we need this here? -->
+
     <dependency>
-      <groupId>eu.coldrye.junit</groupId>
-      <artifactId>junit-testing-common</artifactId>
-      <version>${coy-junit-testing-common.version}</version>
-      <scope>test</scope>
+      <groupId>com.github.sakserv</groupId>
+      <artifactId>hadoop-mini-clusters-kafka</artifactId>
+      <version>${hadoop-mini-clusters.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.sakserv</groupId>
+      <artifactId>hadoop-mini-clusters-hbase</artifactId>
+      <version>${hadoop-mini-clusters.version}</version>
     </dependency>
   </dependencies>
 </project>
