--- a/junit-testing-common/pom.xml
+++ b/junit-testing-common/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <artifactId>junit-testing-common</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -27,8 +27,9 @@
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-common</artifactId>
-      <version>${coy-junit-common.version}</version>
+      <version>1.1.0-SNAPSHOT</version>
     </dependency>
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
