--- a/junit-common/pom.xml
+++ b/junit-common/pom.xml
@@ -7,17 +7,17 @@
   <parent>
     <artifactId>junit-testing</artifactId>
     <groupId>eu.coldrye.junit</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>junit-common</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Commonly used code for junit-testing projects</description>
-  <url>https://github.com/coldrye-java/junit-testing</url>
+  <url>https://github.com/coldrye-java/junit-testing/tree/master/junit-common</url>
 
   <properties>
     <sonar.exclusions>**/SocketUtils.java,**/DiffMatchPatch.java</sonar.exclusions>
