--- a/junit-testing-common/pom.xml
+++ b/junit-testing-common/pom.xml
@@ -7,27 +7,37 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.0</version>
-    <relativePath>..</relativePath>
+    <version>1.1</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>junit-testing-common</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Commonly used testing code for junit-testing projects</description>
-  <url>https://github.com/coldrye-java/junit-testing</url>
+  <url>https://github.com/coldrye-java/junit-testing/tree/master/junit-testing-common</url>
 
   <properties>
-    <coy-junit-common.version>1.0.0</coy-junit-common.version>
+    <junit-common.version>1.1.0</junit-common.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>eu.coldrye.junit</groupId>
+        <artifactId>junit-common</artifactId>
+        <version>${junit-common.version}</version>
+        <scope>compile</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-common</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
