--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>eu.coldrye.junit</groupId>
   <artifactId>junit-testing</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -50,29 +50,28 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <reporting.outputEncoding>UTF-8</reporting.outputEncoding>
 
-    <junit-platform.version>1.0.2</junit-platform.version>
-    <junit-jupiter.version>5.0.2</junit-jupiter.version>
+    <junit-platform.version>1.2.0</junit-platform.version>
+    <junit-jupiter.version>5.2.0</junit-jupiter.version>
     <slf4j-api.version>1.7.25</slf4j-api.version>
     <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
     <mockito-all.version>2.0.2-beta</mockito-all.version>
-    <slf4j-test.version>1.1.0</slf4j-test.version>
+    <slf4j-test.version>1.2.0</slf4j-test.version>
     <api-guardian.version>1.0.0</api-guardian.version>
 
-    <lombok.version>1.16.18</lombok.version>
+    <lombok.version>1.18.2</lombok.version>
     <javax-servlet-api.version>3.0.1</javax-servlet-api.version>
     <spring-framework.version>5.0.2.RELEASE</spring-framework.version>
     <spring-test.version>5.0.4.RELEASE</spring-test.version>
 
     <!-- MAVEN PLUGINS -->
-    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-    <!-- IMPORTANT! we have to use this version otherwise the junit5 based tests will fail -->
-    <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-    <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
+    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <sonar-maven-plugin.version>3.4.0.905</sonar-maven-plugin.version>
-    <jacoco-maven-plugin.version>0.8.0</jacoco-maven-plugin.version>
+    <sonar-maven-plugin.version>5.1</sonar-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>
   </properties>
 
   <distributionManagement>
@@ -443,18 +442,8 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-      </plugin>
-
-      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
       </plugin>
 
       <plugin>
@@ -502,6 +491,26 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>release</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
           </plugin>
         </plugins>
       </build>
