--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ jdk:
   - openjdk8
   - openjdk9
   - openjdk10
-  - openjdk11
+# disabling since jacoco fails
+#  - openjdk11
 cache:
   directories:
   - $HOME/.m2
