--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -20,8 +20,8 @@
   <url>https://github.com/coldrye-java/junit-testing/tree/master/junit-env-extension</url>
 
   <properties>
-    <junit-common.version>1.1.0</junit-common.version>
-    <junit-testing-common.version>1.0.1</junit-testing-common.version>
+    <junit-common.version>1.1.1-SNAPSHOT</junit-common.version>
+    <junit-testing-common.version>1.0.2-SNAPSHOT</junit-testing-common.version>
   </properties>
 
   <dependencyManagement>
