--- a/junit-env-hadoop-mini-clusters/pom.xml
+++ b/junit-env-hadoop-mini-clusters/pom.xml
@@ -20,8 +20,10 @@
   <url>https://github.com/coldrye-java/junit-testing/tree/master/junit-env-hadoop-mini-clusters</url>
 
   <properties>
-    <junit-common.version>1.1.0</junit-common.version>
-    <junit-env-extension.version>1.0.3</junit-env-extension.version>
+    <!-- runtime dependencies -->
+
+    <junit-common.version>1.1.1-SNAPSHOT</junit-common.version>
+    <junit-env-extension.version>1.0.4-SNAPSHOT</junit-env-extension.version>
     <hadoop-mini-clusters.version>0.1.14</hadoop-mini-clusters.version>
   </properties>
 
@@ -45,12 +47,14 @@
         <groupId>com.github.sakserv</groupId>
         <artifactId>hadoop-mini-clusters-hdfs</artifactId>
         <version>${hadoop-mini-clusters.version}</version>
+        <scope>compile</scope>
       </dependency>
 
       <dependency>
         <groupId>com.github.sakserv</groupId>
         <artifactId>hadoop-mini-clusters-hbase</artifactId>
         <version>${hadoop-mini-clusters.version}</version>
+        <scope>compile</scope>
         <exclusions>
           <exclusion>
             <groupId>jdk.tools</groupId>
@@ -63,12 +67,14 @@
         <groupId>com.github.sakserv</groupId>
         <artifactId>hadoop-mini-clusters-kafka</artifactId>
         <version>${hadoop-mini-clusters.version}</version>
+        <scope>compile</scope>
       </dependency>
 
       <dependency>
         <groupId>com.github.sakserv</groupId>
         <artifactId>hadoop-mini-clusters-zookeeper</artifactId>
         <version>${hadoop-mini-clusters.version}</version>
+        <scope>compile</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
