--- a/file-assertions/pom.xml
+++ b/file-assertions/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -22,7 +22,7 @@
   <properties>
     <!-- runtime dependencies -->
 
-    <junit-common.version>1.1.1-SNAPSHOT</junit-common.version>
+    <junit-common.version>1.1.0</junit-common.version>
   </properties>
 
   <dependencyManagement>
