--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ cache:
   directories:
   - $HOME/.m2
 script:
-  - mvn -U install -Dmaven.test.skip=true
+  - mvn -U install -Dmaven.test.skip=true -Dfindbugs.skip=true
   - mvn test
+
