--- a/enum-test-base/pom.xml
+++ b/enum-test-base/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>junit-testing</artifactId>
-    <groupId>eu.coldrye.junit</groupId>
-    <version>1.2-SNAPSHOT</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>eu.coldrye.junit</groupId>
+    <artifactId>junit-testing</artifactId>
+    <version>1.2-SNAPSHOT</version>
+  </parent>
+
   <artifactId>enum-test-base</artifactId>
+  <name>${project.groupId}:${project.artifactId}</name>
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
