chore:prepare next release for - junit-testing:1.2 - junit-common:1.2.0 - junit-testing-common:1.0.2 - junit-env-extension:1.0.4 - file-assertions:1.0.0 - enum-test-base:1.0.0 chore: update release issue template

--- a/enum-test-base/pom.xml
+++ b/enum-test-base/pom.xml
@@ -7,15 +7,15 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
   </parent>
 
   <artifactId>enum-test-base</artifactId>
   <name>${project.groupId}:${project.artifactId}</name>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <properties>
-    <junit-common.version>1.2.0-SNAPSHOT</junit-common.version>
+    <junit-common.version>1.2.0</junit-common.version>
   </properties>
 
   <dependencies>
