--- a/enum-test-base/pom.xml
+++ b/enum-test-base/pom.xml
@@ -7,15 +7,15 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>enum-test-base</artifactId>
   <name>${project.groupId}:${project.artifactId}</name>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <properties>
-    <junit-common.version>1.2.0</junit-common.version>
+    <junit-common.version>1.2.1-SNAPSHOT</junit-common.version>
   </properties>
 
   <dependencies>
