--- a/file-assertions/pom.xml
+++ b/file-assertions/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>file-assertions</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -22,7 +22,7 @@
   <properties>
     <!-- runtime dependencies -->
 
-    <junit-common.version>1.2.0</junit-common.version>
+    <junit-common.version>1.2.1-SNAPSHOT</junit-common.version>
   </properties>
 
   <dependencyManagement>
